Push a fix to the spacing, whoops.

--- a/.config/waybar/style-2monitor.css
+++ b/.config/waybar/style-2monitor.css
@@ -271,6 +271,6 @@ tooltip {
 }
 
 #custom-power,
-#privacy {
+#language {
   margin-right: 8px;
 }
